--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bitcoincore-rpc = { git = "https://github.com/0xb10c/rust-bitcoincore-rpc", branch="2023-10-getrawaddrman" }
+# TODO: Switch to crates.io version once getrawaddrman is included in a release (>= 0.12)
+corepc-client = { git = "https://github.com/rust-bitcoin/corepc", features = ["client-sync"] }
 env_logger = "0.11.8"
 log = "0.4.29"
 serde = "1.0.193"
