--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -15,5 +15,8 @@ warp = { version = "0.3.7", features = ["compression"] }
 tokio = { version = "1", features = ["full"] }
 serde_json = "1.0.145"
 
+[dev-dependencies]
+tempfile = "3"
+
 [features]
 strict = [] # Treat warnings as a build error.
